fix: Fix layout issues in index.html and styles.css. Added: CTA button.

--- a/styles.css
+++ b/styles.css
@@ -60,19 +60,20 @@ a img:hover {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    height: 100vh;
+    width: 100%;
 }
 .hero__content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     padding: 2rem;
     height: 100vh;
     color: white;
     width: 100%;
+    gap: 8rem;
 }
-.hero-text {
+.hero__text {
     font-size: 4rem;
     color: hsla(0, 0%, 0%, 0.9);
     display: flex;
@@ -83,10 +84,33 @@ a img:hover {
 }
 
 .hero__image img{
+    margin-top: 4rem;
+    
     position: relative;
     object-fit: cover;
     width: 450px;
 
+}
+.hero__button {
+
+    display: inline-block;
+  padding: 1rem 2rem;
+  background-color: #1a1a1aef;
+  color: #f5f5f5; /* Soft white */
+  font-family: 'Inter';
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  transition: all 0.3s ease;
+
+}
+.hero__button:hover {
+background-color: #000;
+  transform: translateY(-2px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.1);
 }
 
 /* Subscribtion Plan Section */
@@ -95,8 +119,6 @@ a img:hover {
     background-image: url(media/Storage.jpg);
     background-size: cover;
     background-position: center;
-    height: 100vh;
-
 }
 
 .subscription__content {
@@ -106,7 +128,7 @@ a img:hover {
     justify-content: center;
     gap: 2rem;
     width: 100%;
-    height: 900px;
+
 
 }
 .price-plan-card {
@@ -159,4 +181,43 @@ h3 {
     color: rgb(255, 255, 255);
     align-self: flex-start;
     
+}
+
+@media screen and (max-width: 768px) {
+    .hero__content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+    .hero__text {
+        font-size: 1.5rem;
+        text-align: center;
+    }
+    .hero__image img {
+        width: 100%;
+        max-width: 300px;
+        align-items: center;
+        justify-content: center;
+    }
+    .subscription__content {
+        flex-direction: column;
+        align-items: center;
+    }
+    .price-plan-card {
+        width: 70%;
+    }
+    .nav__leftnav, .nav__rightnav {
+    display: none;
+    gap: 0.8rem;
+    padding: 0;
+
+}
+
+.nav {
+        flex-direction: column;
+
+        padding: 0.5rem;
+    }
 }
